@@ -1,11 +1,11 @@
 dnl ------------------------------------------------------------------------- 
-dnl $Id: configure.in,v 1.98.2.17.2.52 2010/12/08 09:58:22 uehira Exp $
+dnl $Id: configure.in,v 1.98.2.17.2.53 2010/12/09 02:42:23 uehira Exp $
 dnl -------------------------------------------------------------------------
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT
 AC_CONFIG_SRCDIR([src/win.c])
 AC_CANONICAL_TARGET
-AM_INIT_AUTOMAKE(WIN_pkg, 2.1.18)
+AM_INIT_AUTOMAKE(WIN_pkg, 2.1.19)
 AC_CONFIG_HEADERS([config.h])
 AC_ARG_PROGRAM
 
@@ -303,10 +303,10 @@ AC_ARG_ENABLE(statfs64,
 	[  --enable-statfs64       Use statfs64() instead of statfs() if it works.],
 	[ts_cv_statfs64="yes"], [ts_cv_statfs64="no"])
 AC_MSG_RESULT($ts_cv_statfs64)
-if test x$ac_statfs64 = "xyes" -a x$ts_cv_statfs64 = "xyes"; then
+if test x"$ac_statfs64" = "xyes" && test x"$ts_cv_statfs64" = "xyes"; then
    	AC_DEFINE([USE_LARGE_FS],1,[Define 'USE_LARGE_FS'])
 fi
-if test x$ac_statfs64 = "xno" -a x$ts_cv_statfs64 = "xyes"; then
+if test x"$ac_statfs64" = "xno" && test x"$ts_cv_statfs64" = "xyes"; then
    	AC_MSG_WARN(--enable-statfs64 specified but not activated.)
 fi
 
@@ -336,7 +336,7 @@ if test x"$ts_cv_memory_leak_check" = xyes; then
 	AC_CHECK_HEADER(gc.h, [have_gc_header="yes"], [have_gc_header="no"])
 	AC_CHECK_LIB(gc,GC_malloc,[have_gc_lib="yes"], [have_gc_lib="no"])
 
-	if test x"$have_gc_header" = xyes -a x"$have_gc_lib" = xyes; then
+	if test x"$have_gc_header" = xyes && test x"$have_gc_lib" = xyes; then
 		AC_DEFINE([GC_MEMORY_LEAK_TEST],1,[Define 'GC_MEMORY_LEAK_TEST'])
 		CFLAGS="-DFIND_LEAK $CFLAGS"
 		AM_CONDITIONAL(GC_MEMORY_LEAK_TEST, true)
